<resources>
    <string name="app_name">MYDOCTORS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_store_doc">StoreDocActivity</string>
    <string name="title_activity_view_doc">Doctor\'s Profile</string>
    <string name="doc_name">Name: </string>
    <string name="doc_name_hint">Name of the Doctor</string>
    <string name="doc_address">Address:</string>
    <string name="doc_address_hint">Address of the Doctor\'s office</string>
    <string name="doc_locname">Location:</string>
    <string name="doc_locname_hint">e.g State / District / Country</string>
    <string name="doc_specialty">Specialty:</string>
    <string name="doc_specialty_hint">e.g General Physician / Cardiologist </string>
    <string name="doc_consulthours">Consultation Hours:</string>
    <string name="doc_phone">Contact Number:</string>
    <string name="doc_phone_hint">Phone number</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Set the consultation hours</string>
    <string name="time_save">Save</string>
    <string name="time_current">Consultation Hours :</string>
    <string name="doc_consultday">Day:</string>
    <string name="doc_consulttime">Time:</string>
    <string name="choose_day">Choose Day</string>
    <string name="choose_time">Choose Time</string>
    <string name="title_activity_view_doctor_prof">Profile</string>
    <string name="viewdoc_name_1">Edwin Howard Cowley</string>
    <string name="title_activity_list_doc">Searching</string>
    <string name="search_title">Search</string>
    <string name="title_activity_store_patient_profile">Profile</string>
    <string name="patient_name">Name:</string>
    <string name="patient_name_hint">Name of the patient</string>
    <string name="patient_med">Medications:</string>
    <string name="patient_med_hint">Medication used</string>
    <string name="patient_treatment">Treatments:</string>
    <string name="patient_treatment_hint">Treatments taken</string>
    <string name="patient_allergy">Allergy:</string>
    <string name="patient_allergy_hint">Allergies</string>
    <string name="title_activity_view_patient_profile">User Profile</string>
    <string name="patient_name_output">Wendy Goh Wen Yit</string>
    <string name="patient_medication_output">Zytec-C, Turbo Inhaler</string>
    <string name="patient_treatment_output">Normal blood test</string>
    <string name="patient_allergy_output">Caffeine, Seafood, Bactrim</string>
    <string name="title_activity_appointment">Appointment Activity</string>
    <string name="title_activity_on_boarding_guide">On Boarding Guide</string>
    <string name="title_activity_on_boarding_guide2">On Boarding Guide</string>
    <string name="title_activity_search">Search Doctors</string>
    <string-array name="doctors_list">
        <item>Jane Hudson</item>
        <item>Dayal Krishnan</item>
        <item>Lee Chun Yong</item>
        <item>Lim Eng Teck</item>
        <item>Edward Tan</item>
    </string-array>
    <string name="title_activity_search1">Search Doctors</string>
    <string name="title_activity_on_boarding_guide3">On Boarding Guide</string>
    <string name="title_activity_starting_page">MYDOCTORS</string>
    <string name="title_activity_menu">Menu</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_add_menu">Add</string>
    <string name="title_activity_appointment_recorder">Appointment</string>
    <string name="title_activity_appointment_viewer">View Appointment</string>
    <string name="title_activity_doctor_list">DoctorList</string>
    <string name="title_activity_appointment_list">AppointmentList</string>
    <string name="title_activity_search_doc">SearchDoc</string>
    <string name="title_activity_view_doc2">Consultation Hours</string>
    <string name="title_activity_view_doc3">STEP 3</string>
    <string name="title_activity_calendar">Calendar</string>
</resources>
