<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    tools:context="com.example.dylicious.mydoctors.ViewDocActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Add A Doctor"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_name"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/docname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="italic"
        android:hint="@string/doc_name_hint"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_address"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/docadd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="italic"
        android:hint="@string/doc_address_hint"
        android:inputType="textMultiLine"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_locname"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="20sp"/>


    <EditText
        android:id="@+id/docloc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="italic"
        android:hint="@string/doc_locname_hint"
        android:inputType="textMultiLine"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_specialty"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/docspecialty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textStyle="italic"
        android:hint="@string/doc_specialty_hint"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doc_phone"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/docnum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:hint="@string/doc_phone_hint"
        android:paddingTop="5dp"
        android:inputType="phone"
        />

    <Button
        android:id="@+id/proceed2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="Proceed to Next Page"
        android:background="@color/transparent"
        android:layout_marginTop="20dp"/>

</LinearLayout>

</ScrollView>